# azx-backend-test

./: pyproject.toml  readme.md
exercise_1_and_5/: data_manipulation.py  tests.py
exercise_2/: app.py  config.py  controllers.py  dal.py  database.db  database.py  managers.py  schemas.py
exercise_3/: query.md
exercise_4/: tests.py  token_manager.py
